crates/linerule-core/tests/snapshots/snapshot_render__snapshot_bar_at_top_left.snap
---
source: crates/linerule-core/tests/snapshot_render.rs
description: "Bar at (0,0) — clip prevents top of bar going negative"
expression: frame
---
layers:
  - geometry:
      Rect:
        origin:
          x: 0
          y: 0
        width: 1920
        height: 14
    brush:
      Solid:
        r: 255
        g: 235
        b: 59
        a: 170
