crates/linerule-core/tests/snapshots/snapshot_render__snapshot_bar_on_offset_monitor.snap
---
source: crates/linerule-core/tests/snapshot_render.rs
description: Bar on monitor with non-zero origin — bounds offset accordingly
expression: frame
---
layers:
  - geometry:
      Rect:
        origin:
          x: 1920
          y: 526
        width: 1920
        height: 28
    brush:
      Solid:
        r: 255
        g: 235
        b: 59
        a: 170
